add trailing slash to link for dashboards

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -14,7 +14,7 @@ cronQueries=true
 dropGroup=arkime
 dropUser=arkime
 elasticsearch=http://opensearch:9200
-footerTemplate=_version_ | <a href="https://arkime.com">arkime.com 🦉</a> | <a href="/">Malc⦿lm 📄</a> | <a href="/dashboards">Dashboards 📊</a> | <a href="/netbox/">NetBox 💻 | _responseTime_ms ⏱️</a>
+footerTemplate=_version_ | <a href="https://arkime.com">arkime.com 🦉</a> | <a href="/">Malc⦿lm 📄</a> | <a href="/dashboards/">Dashboards 📊</a> | <a href="/netbox/">NetBox 💻 | _responseTime_ms ⏱️</a>
 freeSpaceG=10%
 geoLite2ASN=/opt/arkime/etc/GeoLite2-ASN.mmdb
 geoLite2Country=/opt/arkime/etc/GeoLite2-Country.mmdb
