work in progress for idaholab/Malcolm#393, fuzzy matching for manufacturers based on OUI to NetBox list is not very good (broken)

--- a/config/netbox-common.env.example
+++ b/config/netbox-common.env.example
@@ -5,6 +5,9 @@
 NETBOX_DEFAULT_SITE=Malcolm
 # Whether or not to create catch-all IP Prefixes for private IP space
 NETBOX_PRELOAD_PREFIXES=false
+# Customize manufacturer matching/creation with LOGSTASH_NETBOX_AUTO_POPULATE (see logstash.env)
+NETBOX_DEFAULT_AUTOCREATE_MANUFACTURER=false
+NETBOX_DEFAULT_FUZZY_THRESHOLD=0.95
 # Whether to disable Malcolm's NetBox instance ('true') or not ('false')
 NETBOX_DISABLED=true
 NETBOX_POSTGRES_DISABLED=true
