--- a/logstash/pipelines/enrichment/21_netbox.conf
+++ b/logstash/pipelines/enrichment/21_netbox.conf
@@ -63,6 +63,7 @@ filter {
           "default_dtype_env" => "NETBOX_DEFAULT_DEVICE_TYPE"
           "default_role_env" => "NETBOX_DEFAULT_ROLE"
           "autopopulate_fuzzy_threshold_env" => "NETBOX_DEFAULT_FUZZY_THRESHOLD"
+          "autopopulate_create_manuf_env" => "NETBOX_DEFAULT_AUTOCREATE_MANUFACTURER"
           "source_oui" => "[source][oui]"
           "source_mac" => "[source][mac]"
         }
@@ -103,6 +104,7 @@ filter {
           "default_dtype_env" => "NETBOX_DEFAULT_DEVICE_TYPE"
           "default_role_env" => "NETBOX_DEFAULT_ROLE"
           "autopopulate_fuzzy_threshold_env" => "NETBOX_DEFAULT_FUZZY_THRESHOLD"
+          "autopopulate_create_manuf_env" => "NETBOX_DEFAULT_AUTOCREATE_MANUFACTURER"
           "source_oui" => "[destination][oui]"
           "source_mac" => "[destination][mac]"
         }
