--- a/logstash/pipelines/enrichment/23_severity.conf
+++ b/logstash/pipelines/enrichment/23_severity.conf
@@ -38,7 +38,7 @@ filter {
     if ([source][geo][country_iso_code]) or ([destination][geo][country_iso_code]) or ([dns][GEO]) {
       ruby {
         id => "ruby_add_field_severity_geo"
-        init => "countriesStr = ENV['SENSITIVE_COUNTRY_CODES'] || 'AM,AZ,BY,CN,CU,DZ,GE,HK,IL,IN,IQ,IR,KG,KP,KZ,LY,MD,MO,PK,RU,SD,SS,SY,TJ,TM,TW,UA,UZ' ; $countries = countriesStr.gsub(/\s+/, '').upcase.split(',')"
+        init => "countriesStr = ENV['SENSITIVE_COUNTRY_CODES'] || 'AM,AZ,BY,CN,CU,DZ,GE,HK,IL,IN,IQ,IR,KG,KP,KZ,LY,MD,MO,PK,RU,SD,SS,SY,TJ,TM,TW,UA,UZ' ; @countries = countriesStr.gsub(/\s+/, '').upcase.split(',')"
         code => "
           srcGEOs = event.get('[source][geo][country_iso_code]')
           dstGEOs = event.get('[destination][geo][country_iso_code]')
@@ -46,7 +46,7 @@ filter {
           allGEOs = [srcGEOs.nil? ? [] : (srcGEOs.kind_of?(Array) ? srcGEOs : [srcGEOs]),
                      dstGEOs.nil? ? [] : (dstGEOs.kind_of?(Array) ? dstGEOs : [dstGEOs]),
                      dnsGEOs.nil? ? [] : (dnsGEOs.kind_of?(Array) ? dnsGEOs : [dnsGEOs])].flatten
-          if (!((allGEOs & $countries).empty?)) then
+          if (!((allGEOs & @countries).empty?)) then
             sevtags = Array.new unless (sevtags = event.get('[event][severity_tags]'))
             if !sevtags.kind_of?(Array) then
               newtags = Array.new
@@ -193,13 +193,13 @@ filter {
     if ([event][freq_score_v1]) or ([event][freq_score_v2]) {
       ruby {
         id => "ruby_add_field_severity_domain_entropy"
-        init => "$freqSeverityThreshold = ENV['FREQ_SEVERITY_THRESHOLD'] || '3.0'"
+        init => "@freqSeverityThreshold = ENV['FREQ_SEVERITY_THRESHOLD'] || '3.0'"
         code => "
           freqs1 = event.get('[event][freq_score_v1]')
           freqs2 = event.get('[event][freq_score_v2]')
           lowestFreqScore = [freqs1.nil? ? 100 : (freqs1.kind_of?(Array) ? freqs1.min : freqs1),
                              freqs2.nil? ? 100 : (freqs2.kind_of?(Array) ? freqs2.min : freqs2)].min
-          if (lowestFreqScore < Float($freqSeverityThreshold)) then
+          if (lowestFreqScore < Float(@freqSeverityThreshold)) then
             sevtags = Array.new unless (sevtags = event.get('[event][severity_tags]'))
             if !sevtags.kind_of?(Array) then
               newtags = Array.new
@@ -216,13 +216,13 @@ filter {
     if ([totDataBytes]) or ([network][bytes]) {
       ruby {
         id => "ruby_add_field_severity_total_bytes"
-        init => "mbSeverityThreshold = ENV['TOTAL_MEGABYTES_SEVERITY_THRESHOLD'] || '1000' ; $bytesSeverityThreshold = Integer(mbSeverityThreshold) * 1000000"
+        init => "mbSeverityThreshold = ENV['TOTAL_MEGABYTES_SEVERITY_THRESHOLD'] || '1000' ; @bytesSeverityThreshold = Integer(mbSeverityThreshold) * 1000000"
         code => "
           totDataBytes = event.get('[totDataBytes]')
           totBytes = event.get('[network][bytes]')
           highBytes = [totDataBytes.nil? ? 0 : Integer(totDataBytes),
                        totBytes.nil? ? 0 : Integer(totBytes)].max
-          if ($bytesSeverityThreshold > 0) and (highBytes >= $bytesSeverityThreshold) then
+          if (@bytesSeverityThreshold > 0) and (highBytes >= @bytesSeverityThreshold) then
             sevtags = Array.new unless (sevtags = event.get('[event][severity_tags]'))
             if !sevtags.kind_of?(Array) then
               newtags = Array.new
@@ -239,9 +239,9 @@ filter {
     if ([length]) {
       ruby {
         id => "ruby_add_field_severity_duration"
-        init => "secSeverityThreshold = ENV['CONNECTION_SECONDS_SEVERITY_THRESHOLD'] || '3600' ; $msSeverityThreshold = Integer(secSeverityThreshold) * 1000"
+        init => "secSeverityThreshold = ENV['CONNECTION_SECONDS_SEVERITY_THRESHOLD'] || '3600' ; @msSeverityThreshold = Integer(secSeverityThreshold) * 1000"
         code => "
-          if ($msSeverityThreshold > 0) and (event.get('[length]') >= $msSeverityThreshold) then
+          if (@msSeverityThreshold > 0) and (event.get('[length]') >= @msSeverityThreshold) then
             sevtags = Array.new unless (sevtags = event.get('[event][severity_tags]'))
             if !sevtags.kind_of?(Array) then
               newtags = Array.new
