--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -82,7 +82,7 @@ filter {
 
         ruby {
           id => "ruby_suricata_timestamp_calc"
-          init => "require 'time'; require 'date';"
+          init => "require 'time'; require 'date'"
           code => "
             timpStamp = DateTime.parse(event.get('[suricata][timestamp]')).to_time
             timeStampMs = (1000*timpStamp.to_f).round(0)
