--- a/logstash/pipelines/zeek/12_zeek_mutate.conf
+++ b/logstash/pipelines/zeek/12_zeek_mutate.conf
@@ -259,10 +259,10 @@ filter {
 
     ruby {
       id => "ruby_bsap_ip_rdb_variables"
-      init => "$bsap_ip_rdb_fields = [ :var, :val ]"
+      init => "@bsap_ip_rdb_fields = [ :var, :val ]"
       code => "
         vars = event.get('[zeek][bsap_ip_rdb][variables]').to_s.split(',').zip(
-                    event.get('[zeek][bsap_ip_rdb][variable_value]').to_s.split(',')).map{ |x| $bsap_ip_rdb_fields.zip(x).to_h }
+                    event.get('[zeek][bsap_ip_rdb][variable_value]').to_s.split(',')).map{ |x| @bsap_ip_rdb_fields.zip(x).to_h }
         event.set('[zeek][bsap_ip_rdb][variables]', vars)
         event.set('[zeek][bsap_ip_rdb][variable_count]', vars.length)
       "
@@ -278,10 +278,10 @@ filter {
 
     ruby {
       id => "ruby_bsap_serial_rdb_variables"
-      init => "$bsap_serial_rdb_fields = [ :var, :val ]"
+      init => "@bsap_serial_rdb_fields = [ :var, :val ]"
       code => "
         vars = event.get('[zeek][bsap_serial_rdb][variables]').to_s.split(',').zip(
-                    event.get('[zeek][bsap_serial_rdb][variable_value]').to_s.split(',')).map{ |x| $bsap_serial_rdb_fields.zip(x).to_h }
+                    event.get('[zeek][bsap_serial_rdb][variable_value]').to_s.split(',')).map{ |x| @bsap_serial_rdb_fields.zip(x).to_h }
         event.set('[zeek][bsap_serial_rdb][variables]', vars)
         event.set('[zeek][bsap_serial_rdb][variable_count]', vars.length)
       "
@@ -385,12 +385,12 @@ filter {
     # reference: https://raw.githubusercontent.com/wireshark/wireshark/master/epan/dissectors/packet-dnp.c (search IIN)
     ruby {
       id => "ruby_parse_dnp3_iin"
-      init => "$zeek_dnp3_iin_flags = [ 'Function Code not Implemented', 'Requested Objects Unknown', 'Parameters Invalid or Out of Range', 'Event Buffer Overflow', 'Operation Already Executing', 'Configuration Corrupt', 'Reserved', 'Reserved', 'Broadcast Msg Rx', 'Class 1 Data Available', 'Class 2 Data Available', 'Class 3 Data Available', 'Time Sync Required', 'Digital Outputs in Local', 'Device Trouble', 'Device Restart' ]"
+      init => "@zeek_dnp3_iin_flags = [ 'Function Code not Implemented', 'Requested Objects Unknown', 'Parameters Invalid or Out of Range', 'Event Buffer Overflow', 'Operation Already Executing', 'Configuration Corrupt', 'Reserved', 'Reserved', 'Broadcast Msg Rx', 'Class 1 Data Available', 'Class 2 Data Available', 'Class 3 Data Available', 'Time Sync Required', 'Digital Outputs in Local', 'Device Trouble', 'Device Restart' ]"
       code => "
         iinNum = event.get('[zeek][dnp3][iin]').to_i
         if (iinNum > 0) then
           iinFlags = Array.new
-          $zeek_dnp3_iin_flags.each_with_index do |val, idx|
+          @zeek_dnp3_iin_flags.each_with_index do |val, idx|
             iinFlags.push(val) if (iinNum[idx] == 1)
           end
           event.set('[zeek][dnp3][iin_flags]', iinFlags)
@@ -587,9 +587,9 @@ filter {
 
     ruby {
       id => "ruby_genisys_payload"
-      init => "$genisys_fields = [ :address, :data ]"
+      init => "@genisys_fields = [ :address, :data ]"
       code => "
-        vars = event.get('[zeek][genisys][payload_raw]').to_s.split(',').map{ |x| x.split('=') }.map{ |x| $genisys_fields.zip(x).to_h }
+        vars = event.get('[zeek][genisys][payload_raw]').to_s.split(',').map{ |x| x.split('=') }.map{ |x| @genisys_fields.zip(x).to_h }
         event.set('[zeek][genisys][payload]', vars) unless vars.nil? or (vars.length == 0)
       "
     }
