--- a/logstash/pipelines/enrichment/21_netbox.conf
+++ b/logstash/pipelines/enrichment/21_netbox.conf
@@ -141,6 +141,10 @@ filter {
                                                       merge => { "[related][device_name]" => "[source][device][name]" } } }
   if ([destination][device][name])         { mutate { id => "mutate_merge_destination_device_name_related"
                                                       merge => { "[related][device_name]" => "[destination][device][name]" } } }
+  if ([source][device][id])                { mutate { id => "mutate_merge_source_device_id_related"
+                                                      merge => { "[related][device_id]" => "[source][device][id]" } } }
+  if ([destination][device][id])           { mutate { id => "mutate_merge_destination_device_id_related"
+                                                      merge => { "[related][device_id]" => "[destination][device][id]" } } }
 
   # network.name (based on info from [destination][segment][name] and [source][segment][name])
   if ([destination][segment][name]) { mutate { id => "mutate_add_field_ecs_network_name_resp"
