--- a/netbox/preload/custom_links.yml
+++ b/netbox/preload/custom_links.yml
@@ -5,7 +5,7 @@
   content_type: device
 - name: prefix_link_to_dashboards
   link_text: 'Asset Interaction Analysis'
-  link_url: '/dashboards/app/dashboards#/view/677ee170-809e-11ed-8d5b-07069f823b6f?_g=(filters:!((meta:(key:network.name,negate:!f,params:(query:1),type:phrase),query:(match_phrase:(network.name:{{ object.description }})))))'
+  link_url: "/dashboards/app/dashboards#/view/677ee170-809e-11ed-8d5b-07069f823b6f?_g=(filters:!((meta:(key:network.name,negate:!f,params:(query:1),type:phrase),query:(match_phrase:(network.name:'{{ object.description }}')))))"
   new_window: True
   content_type: prefix
 - name: device_link_to_arkime
